[#1690] fix picture and arrow vertical-align

--- a/app/assets/stylesheets/modals.css.scss
+++ b/app/assets/stylesheets/modals.css.scss
@@ -26,6 +26,11 @@
   img{
     max-height:380px;
   }
+
+  img#issue-display{
+    max-height:100%;
+    position:relative;
+  }
   
   .box{
     border: none;
